overflow fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,13 +7,15 @@
 }
 
 body {
+  overflow-x: hidden;
+
   background: #111;
 }
 
 section {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,5 +42,5 @@ section img {
 
 .Description h4 {
   color: #fff;
-  font-size: 2rem;
+  font-size: 3rem;
 }
